# dota2-analysis

./: .gitignore  .golangci.yml  1.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.work  go.work.sum  test.go
.github/: CODEOWNERS  renovate.json
.github/workflows/: ci.yml
deploy/: .env.example  docker-bake.hcl  docker-compose.yml  proxy.txt.example
deploy/compose/: compose.analysis.yml
deploy/dockerfiles/: .gitkeep
deploy/postgres/: Dockerfile
docs/sla/: enricher-sla.md
go-analysis/: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum
go-analysis/deploy/: .env.example  README.md  docker-bake.hcl  docker-compose.yml
go-analysis/sql/: derive_phase_table.sql
go-analysis/training/: Dockerfile  pyproject.toml
go-analysis/training/src/trainer/: __init__.py  __main__.py  candidates.py  config.py  db.py  diagnose_mvs.sql  evaluate.py  extract.py  feature_specs.py  features.py  gate.py  labels.py  publish.py  quality.py  train_imitation.py  train_value.py
go-core/: ARCHITECTURE.md  CODEOWNERS  README.md  go.mod  go.sum
go-core/.github/: pull_request_template.md
go-core/bootstrap/: logger.go  postgres.go  telemetry.go
go-core/contracttest/: imports_test.go  schema_test.go
go-core/domain/: ids.go  ids_test.go  match.go
go-core/migrator/: runner.go  runner_test.go
go-core/schema/: README.md  embed.go
go-ingestion/: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum
go-ingestion/config/: proxy.txt.example
go-ingestion/deploy/: docker-compose.yml
scripts/: publish-core.sh
(+212 files in other folders)
