[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dota2-trainer"
version = "0.1.0"
description = "Dota 2 draft analysis model trainer"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "lightgbm>=4.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
]

[project.scripts]
trainer = "trainer.__main__:cli"
